# goit_web_hws

./: README.md
web_hw01-UML diagram core project/: README.md
web_hw02-poetry and docker core project/: Dockerfile  README.md  pyproject.toml  requirements.txt
web_hw02-poetry and docker core project/CODE_CRAFTERS_CORE/: AddressBook.py  AvadaKedavra.py  CommandFactory.py  FileSorting.py  NoteFeature.py  RecordData.py  main.py
web_hw07-sqlalchemy with postgres/: README.md  config.ini  my_select.py  pyproject.toml
web_hw07-sqlalchemy with postgres/additional_task/: cli_comands.py  main_cli.py
web_hw07-sqlalchemy with postgres/conf_db/: connect_db.py  tab_models.py
web_hw07-sqlalchemy with postgres/custom_funcs/: custom_faker.py  custom_vizualization.py
web_hw07-sqlalchemy with postgres/migrations/: env.py
web_hw07-sqlalchemy with postgres/migrations/versions/: 927aa409b421_first.py
web_hw07-sqlalchemy with postgres/seeds/: seed_01.py
web_hw08-atlas mongodb/: README.md  pyproject.toml  queries_to_db.py
web_hw08-atlas mongodb/conn_modd/: models.py
web_hw08-atlas mongodb/customs/: custom_vizualization.py
web_hw08-atlas mongodb/input_data_seed/: seed_01_async.py  seed_01_sync.py
web_hw08-atlas mongodb/second_task/: consumer_email.py  consumer_sms.py  producer.py
web_hw09-web scraping bf and scrapy/: README.md  pyproject.toml
web_hw09-web scraping bf and scrapy/BeautifullSoup_exmp/: a_main.py  authors.json  main.py  quotes.json  vb_as.py
web_hw09-web scraping bf and scrapy/Scrapy_exmp/web9_sc/: authors.json  quotes.json  scrapy.cfg
web_hw09-web scraping bf and scrapy/Scrapy_exmp/web9_sc/web9_sc/: items.py  middlewares.py  pipelines.py  settings.py
web_hw09-web scraping bf and scrapy/Scrapy_exmp/web9_sc/web9_sc/spiders/: page_spider.py
web_hw09-web scraping bf and scrapy/conn_modd/: connect.py  models.py
web_hw09-web scraping bf and scrapy/customs/: custom_logger.py  custom_timer.py
web_hw09-web scraping bf and scrapy/second_task/: authors.json
web_hw10-django quote site/: .gitignore  README.md  pyproject.toml
web_hw10-django quote site/hw10/hw10/: settings.py  urls.py
web_hw10-django quote site/hw10/quotes/: models.py  urls.py  views.py
web_hw10-django quote site/hw10/quotes/templatetags/: path_split.py
web_hw10-django quote site/hw10/users/: forms.py  urls.py  views.py
web_hw10-django quote site/hw10/utils/: migrate_from_mongo.py  scrape_data.py
web_hw11-fastapi and sqlalchemy/: README.md  main.py  pyproject.toml
web_hw11-fastapi and sqlalchemy/source/config/: conf.py
web_hw11-fastapi and sqlalchemy/source/database/: db.py
web_hw11-fastapi and sqlalchemy/source/models/: models.py
web_hw11-fastapi and sqlalchemy/source/repository/: users.py
web_hw11-fastapi and sqlalchemy/source/routes/: users.py
web_hw11-fastapi and sqlalchemy/source/schemas/: user.py
web_hw13-email auth avatar in fastapi/: .env.example  .gitignore  README.md  pyproject.toml
web_hw13-email auth avatar in fastapi/django_part/: README.md  pyproject.toml
web_hw13-email auth avatar in fastapi/django_part/hw10/: .env.example
web_hw13-email auth avatar in fastapi/django_part/hw10/hw10/: settings.py
web_hw13-email auth avatar in fastapi/django_part/hw10/quotes/: forms.py  widgets.py
web_hw13-email auth avatar in fastapi/django_part/hw10/users/: forms.py  urls.py  views.py
web_hw13-email auth avatar in fastapi/django_part/hw10/utils/: add_quotes_to_mongo.py  migrate_from_scrape_files.py
web_hw13-email auth avatar in fastapi/source/models/: create_tables.py
web_hw13-email auth avatar in fastapi/source/repository/: consumers.py  users.py
web_hw13-email auth avatar in fastapi/source/routes/: auth.py  user_profile.py  users.py
web_hw13-email auth avatar in fastapi/source/schemas/: consumer.py
web_hw13-email auth avatar in fastapi/source/services/: auth.py  email.py  roles.py
web_hw13-email auth avatar in fastapi/source/services/templates/: password_form.html
web_hw14-sphinx unittest and pytest/: .coverage  .gitignore  README.md  main.py  pyproject.toml
web_hw14-sphinx unittest and pytest/docs/source/: conf.py  index.rst
web_hw14-sphinx unittest and pytest/source/config/: conf.py
web_hw14-sphinx unittest and pytest/source/models/: models.py
web_hw14-sphinx unittest and pytest/source/repository/: consumers.py  users.py
web_hw14-sphinx unittest and pytest/source/routes/: auth.py  user_profile.py  users.py
web_hw14-sphinx unittest and pytest/source/services/: auth.py  email.py  roles.py
web_hw14-sphinx unittest and pytest/source/services/templates/: password_form.html
web_hw14-sphinx unittest and pytest/tests/pytests/: conftest.py  test_2e2_users.py  test_e2e_auth.py  test_routes_auth.py  test_routes_users.py
web_hw14-sphinx unittest and pytest/tests/unittests/: test_unit_repository_consumers.py  test_unit_repository_users.py
(+80 files in other folders)
