[tool.poetry]
name = "web-hw02"
version = "1.3.130"
description = ""
authors = ["DmytroSDV <142345037+DmytroSDV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.9.0"
tabulate = "^0.9.0"
unidecode = "^1.3.7"
prompt-toolkit = "^3.0.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
