[tool.poetry]
name = "web-hw07"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <sdmytrov11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^23.0.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.26"
argparse = "^1.4.0"
tabulate = "^0.9.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
