[tool.poetry]
name = "web-hw08"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <sdmytrov11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.1"
mongoengine = "^0.27.0"
aiofile = "^3.8.8"
aiopath = "0.6.11"
tabulate = "^0.9.0"
redis = "^5.0.1"
pika = "^1.3.2"
redis-lru = "^0.1.2"
faker = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
