[tool.poetry]
name = "web-hw09"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <sdmytrov11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.27"
requests = "^2.31.0"
aiohttp = "^3.9.3"
mongoengine = "^0.27.0"
pymongo = "^4.6.2"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
