[tool.poetry]
name = "web-hw10"
version = "0.1.0"
description = ""
authors = ["DmytroSDV <142345037+DmytroSDV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
